--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="wrapper">
         <div class="logo">
-            <img src="images/Слайд.svg" alt="Logo Purple School">
+            <img src="Слайд.svg" alt="Logo Purple School">
         </div>
         <form class="timer" onsubmit="app.submit(event)">
             <div class="info">
